[tool.poetry]
name = "prnotifybot"
version = "0.1.0"
description = ""
authors = ["Gramovich Alexander <gramovich.alex@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask  = "^2.3.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
