[tool.poetry]
name = "prnotifybot"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Gramovich Alexander <gramovich.alex@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask  = "^3.1.0"
telethon = "^1.38.1"
github-webhook = {git = "https://github.com/bloomberg/python-github-webhook.git", rev = "master"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
